--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,9 @@
       <h1>{{ site.title }}</h1>
     </header>
     <nav>
-      <a href="{{ '/' | relative_url }}">Inicio</a>
-      <a href="{{ '/about.html' | relative_url }}">Misión y Visión</a>
-      <a href="{{ '/catalog.html' | relative_url }}">Catálogo</a>
+      <a href="{{ '/' | relative_url }}">Inicio</a> |
+      <a href="{{ '/about.html' | relative_url }}">Misión y Visión</a> |
+      <a href="{{ '/catalog.html' | relative_url }}">Catálogo</a> |
       <a href="{{ '/contact.html' | relative_url }}">Contacto</a>
     </nav>
     <main>
@@ -51,3 +51,4 @@
     </main>
   </body>
 </html>
+
