--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
+     <link rel="shortcut icon" href="{{ '/assets/iconp.png' | relative_url }}" type="image/png" />
     <style>
       body {
         font-family: sans-serif;
